[gd_scene load_steps=41 format=2]

[ext_resource path="res://addons/angelica/Ai.gd" type="Script" id=1]
[ext_resource path="res://addons/angelica/images/1f64b.png" type="Texture" id=2]
[ext_resource path="res://addons/angelica/fonts/open_sans_yellow.tres" type="DynamicFont" id=3]
[ext_resource path="res://addons/angelica/Control.gd" type="Script" id=4]
[ext_resource path="res://addons/angelica/fonts/open_sans_bold.tres" type="DynamicFontData" id=5]
[ext_resource path="res://addons/angelica/db.gd" type="Script" id=6]
[ext_resource path="res://addons/angelica/sounds/winning-bells.ogg" type="AudioStream" id=7]
[ext_resource path="res://addons/angelica/Print.gd" type="Script" id=8]
[ext_resource path="res://addons/angelica/scripts/LineEdit.gd" type="Script" id=9]
[ext_resource path="res://addons/angelica/fonts/Link-dynamicfont.tres" type="DynamicFont" id=10]
[ext_resource path="res://addons/angelica/fonts/new_dynamicfontdata.tres" type="DynamicFontData" id=11]
[ext_resource path="res://addons/angelica/fonts/OpenSans-SemiboldItalic.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://addons/angelica/scripts/TextEdit.gd" type="Script" id=13]
[ext_resource path="res://addons/angelica/Editor.gd" type="Script" id=14]
[ext_resource path="res://addons/angelica/RichTextLabel.gd" type="Script" id=15]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.176471, 0.176471, 0.176471, 0.870588 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.85098, 0.541176, 0.937255, 1 )

[sub_resource type="Theme" id=4]
VScrollBar/styles/LeftScrollBar = SubResource( 3 )

[sub_resource type="StyleBoxEmpty" id=5]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 2.0
content_margin_bottom = 2.0

[sub_resource type="DynamicFont" id=6]
size = 17
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=7]
size = 17
outline_size = 2
outline_color = Color( 0.109804, 0.109804, 0.109804, 0.72549 )
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.388235, 0.384314, 0.321569, 0.980392 )

[sub_resource type="Theme" id=9]

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://addons/angelica/fonts/OpenSans-Regular.ttf"

[sub_resource type="DynamicFont" id=12]
font_data = SubResource( 11 )

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="Theme" id=14]
VScrollBar/styles/LeftScrollBar = null
VScrollBar/styles/scroll = SubResource( 13 )

[sub_resource type="DynamicFont" id=15]
size = 12
outline_size = 2
outline_color = Color( 0.0352941, 0.0352941, 0.0352941, 0.807843 )
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 5 )

[sub_resource type="DynamicFontData" id=16]
font_path = "res://addons/angelica/fonts/OpenSans-Regular.ttf"

[sub_resource type="DynamicFont" id=17]
size = 12
outline_size = 2
outline_color = Color( 0.129412, 0.129412, 0.129412, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 1
extra_spacing_space = 1
font_data = SubResource( 16 )

[sub_resource type="Theme" id=18]
default_font = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=19]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color( 0.423529, 0.423529, 0.423529, 0.427451 )
border_color = Color( 0.592157, 0.592157, 0.592157, 0.772549 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 4
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="StyleBoxFlat" id=20]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.184314, 0.184314, 0.184314, 0.556863 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.8, 0.8, 0.8, 0.447059 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_right = 4.0

[sub_resource type="Theme" id=21]

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.447059, 0.333333, 0.462745, 0.670588 )

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="DynamicFontData" id=24]
font_path = "res://addons/angelica/fonts/OpenSans-Semibold.ttf"

[sub_resource type="DynamicFont" id=25]
size = 17
outline_size = 3
outline_color = Color( 0.109804, 0.109804, 0.109804, 0.72549 )
font_data = SubResource( 24 )

[node name="Angelica" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="DB" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Control" type="Control" parent="."]
margin_left = 6.0
margin_top = 258.547
margin_right = 70.0
margin_bottom = 322.547
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node" type="Node" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AngelicaTimer" type="Timer" parent="."]
one_shot = true

[node name="AngelicaTimer2" type="Timer" parent="."]

[node name="TimerMini" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Interface" type="Node2D" parent="."]

[node name="Panel" type="Node2D" parent="Interface"]

[node name="Panel" type="Panel" parent="Interface/Panel"]
pause_mode = 2
margin_left = 20.0
margin_right = 640.0
margin_bottom = 280.0
mouse_filter = 1
theme = SubResource( 1 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Print" type="RichTextLabel" parent="Interface/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 33.8325
margin_top = 13.1189
margin_right = 624.833
margin_bottom = 265.119
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 10, 10 )
focus_next = NodePath("../LineEdit")
focus_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_fonts/italics_font = SubResource( 6 )
custom_fonts/bold_font = SubResource( 7 )
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0.784314, 0.501961, 0.823529, 1 )
bbcode_enabled = true
tab_size = 7
scroll_following = true
selection_enabled = true
override_selected_font_color = true
custom_effects = [ null, null, null, null, null ]
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Editor" type="Node2D" parent="Interface"]
position = Vector2( 22, 2 )
script = ExtResource( 14 )

[node name="bg" type="Panel" parent="Interface/Editor"]
margin_right = 614.0
margin_bottom = 279.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="Interface/Editor"]
margin_left = 20.0
margin_top = 27.0
margin_right = 604.0
margin_bottom = 229.0
theme = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.0196078, 0.682353, 0.101961, 1 )
text = "This is the note editor: Here are some useful commands:
notes
list notes
add note 1 Testing : (will add a note named 1 with the text \"Testing\")
edit note 1 (wil open the note \"1\" here) than you can edit and save it.
del note 1 (will delete your note named 1)
HAVE FUN!!!"
syntax_highlighting = true
fold_gutter = true
highlight_all_occurrences = true
override_selected_font_color = true
smooth_scrolling = true
wrap_enabled = true
caret_blink = true
caret_blink_speed = 1.18
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit2" type="TextEdit" parent="Interface/Editor"]
visible = false
margin_left = 34.0
margin_top = 35.0
margin_right = 585.0
margin_bottom = 257.0
theme = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.0196078, 0.682353, 0.101961, 1 )
text = "This is the note editor: Here are some useful commands:
notes
list notes
add note 1 Testing : (will add a note named 1 with the text \"Testing\")
edit note 1 (wil open the note \"1\" here) than you can edit and save it.
del note 1 (will delete your note named 1)
HAVE FUN!!!"
fold_gutter = true
override_selected_font_color = true
smooth_scrolling = true
caret_blink = true
caret_blink_speed = 1.18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save" type="LinkButton" parent="Interface/Editor"]
margin_left = 491.378
margin_top = 236.847
margin_right = 544.378
margin_bottom = 262.847
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../../Print")
focus_previous = NodePath("..")
focus_mode = 2
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0.815686, 0.145098, 1 )
text = "[save]"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="copy" type="LinkButton" parent="Interface/Editor"]
margin_left = 436.448
margin_top = 238.019
margin_right = 490.448
margin_bottom = 264.019
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../../Print")
focus_previous = NodePath("..")
focus_mode = 2
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0.815686, 0.145098, 1 )
text = "[copy]"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close" type="LinkButton" parent="Interface/Editor"]
margin_left = 549.518
margin_top = 236.847
margin_right = 586.518
margin_bottom = 262.847
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../../Print")
focus_previous = NodePath("..")
focus_mode = 2
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0, 0.117647, 1 )
text = "[x]"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Interface/Editor"]
margin_left = 164.99
margin_top = -0.130962
margin_right = 414.99
margin_bottom = 25.869
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0156863, 0.694118, 0.113725, 1 )
text = "Angelica Editor ver. 123"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Print2" type="RichTextLabel" parent="Interface"]
margin_left = 71.0
margin_top = 232.0
margin_right = 529.0
margin_bottom = 285.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 10, 10 )
focus_next = NodePath("../LineEdit")
focus_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 10
theme = SubResource( 14 )
custom_styles/focus = SubResource( 5 )
custom_fonts/bold_font = SubResource( 15 )
custom_fonts/normal_font = SubResource( 17 )
custom_colors/default_color = Color( 0.784314, 0.501961, 0.823529, 1 )
bbcode_enabled = true
tab_size = 7
scroll_following = true
selection_enabled = true
custom_effects = [ null, null, null, null, null ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Interface"]
anchor_left = -20.0
anchor_top = 10.0
anchor_right = -20.0
anchor_bottom = 10.0
margin_left = 110.0
margin_top = 274.0
margin_right = 531.0
margin_bottom = 300.0
theme = SubResource( 18 )
custom_styles/focus = SubResource( 19 )
custom_styles/normal = SubResource( 20 )
clear_button_enabled = true
placeholder_text = " "
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEditFake" type="RichTextLabel" parent="Interface/LineEdit"]
visible = false
anchor_top = 0.191
anchor_bottom = 0.191
margin_left = 3.0
margin_top = -2.303
margin_right = 359.0
margin_bottom = 23.697
rect_pivot_offset = Vector2( 10, 10 )
focus_next = NodePath("../LineEdit")
size_flags_horizontal = 4
size_flags_vertical = 10
theme = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_fonts/italics_font = SubResource( 6 )
custom_fonts/bold_font = SubResource( 7 )
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0.784314, 0.501961, 0.823529, 1 )
bbcode_enabled = true
tab_size = 7
scroll_active = false
custom_effects = [ null, null, null, null, null ]
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Linkmini" type="LinkButton" parent="Interface/LineEdit"]
margin_left = -36.5559
margin_top = 12.3008
margin_right = -15.5559
margin_bottom = 42.3008
grow_horizontal = 2
grow_vertical = 2
rect_rotation = -89.9999
focus_mode = 2
custom_fonts/font = ExtResource( 10 )
text = "<"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SendButton" type="LinkButton" parent="Interface/LineEdit"]
margin_left = 427.586
margin_top = -3.26139
margin_right = 492.586
margin_bottom = 26.7386
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../../Print")
focus_previous = NodePath("..")
focus_mode = 2
custom_fonts/font = ExtResource( 10 )
text = "Please"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warning" type="Node2D" parent="Interface"]
visible = false

[node name="Warning" type="Panel" parent="Interface/Warning"]
margin_left = 156.699
margin_top = 130.293
margin_right = 502.699
margin_bottom = 293.293
theme = SubResource( 21 )
custom_styles/panel = SubResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Interface/Warning"]
margin_left = 288.738
margin_top = 258.567
margin_right = 374.738
margin_bottom = 281.567
text = "Ok, Thanks!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Interface/Warning"]
margin_left = 228.691
margin_top = 155.52
margin_right = 420.691
margin_bottom = 248.52
grow_horizontal = 2
grow_vertical = 2
text = "Angelica Says:

YOUR TIME IS UP!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alarm" type="AudioStreamPlayer" parent="Interface/Warning"]
stream = ExtResource( 7 )

[node name="Menu" type="RichTextLabel" parent="Interface"]
margin_left = 79.3816
margin_top = 293.518
margin_right = 634.382
margin_bottom = 320.518
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
meta_underlined = false
text = "[copy] [save] [edit chat] [update chat] [bye]"
fit_content_height = true
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Polygon2D2" type="Polygon2D" parent="Interface"]
color = Color( 1, 1, 1, 0 )
polygon = PoolVector2Array( 13.5961, 321.43, 12.8782, 273.811, 21.9372, 262.554, 21.5808, 253.869, 25.5347, 250.078, 628.719, 250.549, 632.059, 251.036, 636.514, 252.596, 638.285, 255.506, 638.381, 259.741, 639.451, 307.167, 639.762, 320.957, 623.339, 320.969 )
__meta__ = {
"_edit_lock_": true
}

[node name="PolygonFull" type="Polygon2D" parent="Interface"]
color = Color( 1, 1, 1, 0 )
polygon = PoolVector2Array( 19.7026, 320.226, 44.9136, 320.245, 64.7662, 320.245, 623.013, 319.695, 633.677, 316.328, 636.893, 307.33, 636.655, 287.843, 636.42, 5.25896, 635.367, 2.66327, 633.122, 0.69896, 629.124, -0.142886, 24.6864, 0.0618629, 21.3153, 2.6839, 19.8169, 6.99154, 19.8169, 264.433, 16.2585, 270.051, 13.8237, 278.667, 13.7685, 304.325, 8.39235, 305.636, 7.26862, 317.81, 11.7635, 320.245 )
__meta__ = {
"_edit_lock_": true
}

[node name="Face" type="Sprite" parent="."]
position = Vector2( 41.0351, 321.935 )
texture = ExtResource( 2 )
offset = Vector2( 0, -32 )
__meta__ = {
"_edit_lock_": true
}

[node name="TimerClock" type="Label" parent="Face"]
margin_left = -38.0
margin_top = -22.142
margin_right = 42.0
margin_bottom = 1.858
grow_horizontal = 2
grow_vertical = 2
custom_styles/normal = SubResource( 23 )
custom_fonts/font = SubResource( 25 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PolygonFace" type="Polygon2D" parent="."]
color = Color( 0.796078, 0.101961, 0.788235, 0 )
polygon = PoolVector2Array( 32.4028, 320.276, 49.8066, 319.508, 53.8008, 312.466, 56.2184, 305.423, 53.1317, 296.698, 47.0737, 291.443, 35.3011, 291.023, 29.0995, 295.963, 25.6308, 305.108, 30.1506, 316.881 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 13.0
margin_top = 197.0
margin_right = 56.0
margin_bottom = 257.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeOut" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="Blink" type="Timer" parent="."]
wait_time = 600.0
autostart = true

[node name="RSI" type="Timer" parent="."]
wait_time = 3000.0
autostart = true

[connection signal="gui_input" from="Control" to="." method="_on_Control_gui_input"]
[connection signal="gui_input" from="Control" to="Control" method="_on_Control_gui_input"]
[connection signal="mouse_entered" from="Control" to="." method="_on_Control_mouse_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="AngelicaTimer" to="." method="_on_AngelicaTimer_timeout"]
[connection signal="timeout" from="AngelicaTimer2" to="." method="_on_AngelicaTimer2_timeout"]
[connection signal="timeout" from="TimerMini" to="." method="_on_TimerMini_timeout"]
[connection signal="button_up" from="Interface/Editor/save" to="." method="_on_save_button_up"]
[connection signal="button_up" from="Interface/Editor/copy" to="." method="_on_copy_button_up"]
[connection signal="button_up" from="Interface/Editor/close" to="." method="_on_close_button_up"]
[connection signal="meta_clicked" from="Interface/Print2" to="." method="_on_Print_meta_clicked"]
[connection signal="gui_input" from="Interface/LineEdit" to="." method="_on_LineEdit_gui_input"]
[connection signal="text_entered" from="Interface/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="text_entered" from="Interface/LineEdit" to="Interface/Panel/Print" method="_on_LineEdit_text_entered"]
[connection signal="button_up" from="Interface/LineEdit/Linkmini" to="." method="_on_Linkmini_button_up"]
[connection signal="button_up" from="Interface/LineEdit/SendButton" to="." method="_on_SendButton_button_up"]
[connection signal="button_up" from="Interface/LineEdit/SendButton" to="Interface/Panel/Print" method="_on_SendButton_button_up"]
[connection signal="button_up" from="Interface/Warning/Button" to="." method="_on_Button_button_up"]
[connection signal="timeout" from="TimeOut" to="." method="_on_TimeOut_timeout"]
[connection signal="timeout" from="Blink" to="." method="_on_Blink_timeout"]
[connection signal="timeout" from="RSI" to="." method="_on_RSI_timeout"]
